# ai-jaedolph

./: .containerignore  Containerfile  LICENSE  README.md  ai_jaedolph.ini.example  ai_jaedolph.py  ai_jaedolph_system_prompt.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docker-build.yml  run-tests.yml
